4 December 2019: Wouter
	- Fix lock type for memory purify log lock deletion.

3 December 2019: Wouter
	- Merge pull request #124 from rmetrich: Changed log lock
	  from 'quick' to 'basic' because this is an I/O lock.
	- Fix text around serial arithmatic used for RRSIG times to refer
	  to correct RFC number.
	- Fix Assert Causing DoS in synth_cname(),
	  reported by X41 D-Sec.
	- Fix similar code in auth_zone synth cname to add the extra checks.
	- Fix Assert Causing DoS in dname_pkt_copy(),
	  reported by X41 D-Sec.
	- Fix OOB Read in sldns_wire2str_dname_scan(),
	  reported by X41 D-Sec.
	- Fix Out of Bounds Write in sldns_str2wire_str_buf(),
	  reported by X41 D-Sec.
	- Fix Out of Bounds Write in sldns_b64_pton(),
	  fixed by check in sldns_str2wire_int16_data_buf(),
	  reported by X41 D-Sec.
	- Fix Insufficient Handling of Compressed Names in dname_pkt_copy(),
	  reported by X41 D-Sec.
	- Fix Out of Bound Write Compressed Names in rdata_copy(),
	  reported by X41 D-Sec.
	- Fix Hang in sldns_wire2str_pkt_scan(),
	  reported by X41 D-Sec.
	  This further lowers the max to 256.
	- Fix snprintf() supports the n-specifier,
	  reported by X41 D-Sec.
	- Fix Bad Indentation, in dnscrypt.c,
	  reported by X41 D-Sec.
	- Fix Client NONCE Generation used for Server NONCE,
	  reported by X41 D-Sec.
	- Fix compile error in dnscrypt.
	- Fix _vfixed not Used, removed from sbuffer code,
	  reported by X41 D-Sec.
	- Fix Hardcoded Constant, reported by X41 D-Sec.
	- make depend

2 December 2019: Wouter
	- Merge pull request #122 from he32: In tcp_callback_writer(),
	  don't disable time-out when changing to read.

22 November 2019: George
	- Fix compiler warnings.

22 November 2019: Wouter
	- Fix dname loop maximum, reported by Eric Sesterhenn from X41 D-Sec.
	- Add make distclean that removes everything configure produced,
	  and make maintainer-clean that removes bison and flex output.

20 November 2019: Wouter
	- Fix Out of Bounds Read in rrinternal_get_owner(),