@@ -1,5 +1,6 @@
 4 December 2019: Wouter
 	- Fix lock type for memory purify log lock deletion.
+	- Fix testbound for alloccheck runs, memory purify and lock checks.
 
 3 December 2019: Wouter
 	- Merge pull request #124 from rmetrich: Changed log lock
